# LearnVulkan2

./: .gitignore  CMakeLists.txt  README.md
data/: config.json
data/shaders/: main-frag.spv  main-vert.spv  main.frag  main.vert
data/translations/: en_us.json  zh_cn.json
include/: app.h  schema.h
src/: app_run.cpp  app_setup.cpp  app_vk.cpp  main.cpp
